# opus

./: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc  README.md  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
kernel/: Cargo.toml  rustfmt.toml
kernel/adapter/: Cargo.toml
kernel/app/: Cargo.toml  build.rs  tauri.conf.json
kernel/app/capabilities/: main.json
kernel/app/src/: lib.rs  main.rs
kernel/cli/: Cargo.toml
kernel/error/: Cargo.toml
kernel/error/src/: lib.rs
kernel/model/: Cargo.toml
kernel/model/src/: lib.rs  repository.rs
kernel/model/src/entity/: keyring.rs
kernel/model/src/repository/: keyring.rs
kernel/plugin/: Cargo.toml
kernel/plugin/grpc/: Cargo.toml  build.rs
kernel/plugin/grpc/permissions/autogenerated/: reference.md
kernel/plugin/grpc/permissions/autogenerated/commands/: init_connection.toml
kernel/plugin/grpc/permissions/schemas/: schema.json
kernel/plugin/grpc/proto/: user.proto
kernel/plugin/grpc/src/: commands.rs  lib.rs
kernel/plugin/local/: Cargo.toml
kernel/plugin/local/state/: Cargo.toml  build.rs
kernel/plugin/local/state/permissions/autogenerated/: reference.md
kernel/plugin/local/state/permissions/schemas/: schema.json
kernel/plugin/local/state/src/: lib.rs
kernel/plugin/server/: Cargo.toml
kernel/plugin/server/connection/: Cargo.toml  build.rs
kernel/plugin/server/connection/src/: commands.rs  lib.rs
kernel/plugin/state/: Cargo.toml  build.rs
kernel/plugin/state/permissions/autogenerated/: reference.md
kernel/plugin/state/permissions/schemas/: schema.json
kernel/plugin/state/src/: commands.rs  lib.rs
kernel/service/: Cargo.toml
kernel/service/src/: lib.rs
kernel/service/src/implementation/: keyring.rs
kernel/util/: Cargo.toml
ui/app/: app.component.html  app.component.ts
ui/app/api/: autostart.ts
