[workspace]
resolver = "2"
members = ["app", "plugin/*"]

[workspace.package]
version = "0.0.1"
description = "ProjectManegement App"
authors = ["We"]
edition = "2021"
rust-version = "1.78.0"
readme = "../README.md"
repository = "https://github.com/OpusCommunity/opus"
license = "MIT"

[profile.release]
opt-level = "z"
debug = false
strip = true
overflow-checks = true
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
strip = "debuginfo"
overflow-checks = true
lto = "off"
panic = "unwind"
codegen-units = 256

[workspace.target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[workspace.dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-build = "2.0.0-beta"
tauri-plugin = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.59"
log = "0.4.21"
chrono = { version = "0.4.38", features = [
    "serde",
    "std",
    "clock",
], default-features = false }
async-trait = "0.1.80"
derive-new = "0.6"
uuid = { version = "1.8", features = ["v4"] }
