[package]
name = "app"
version = "0.0.1"
description = "opus app source"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# 設定オプションは次のURLを参照: https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "opus"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
tauri-plugin-os = "2.0.0-beta"
tauri-plugin-autostart = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-window-state = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
state = { path = "../plugin/state" }
grpc = { path = "../plugin/grpc" }
