[package]
name = "grpc"
version = "0.0.1"
description = "grpc plugin."
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
links = "grpc"

# 設定オプションは次のURLを参照: https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
tonic-build = "0.11.0"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

tonic = "0.11.0"
prost = "0.12.6"
